@@ -33,6 +33,9 @@ Misc:
   https://charm.readthedocs.io/en/latest/charm++/manual.html#installation-with-cmake
   for more information.
 
+- Charm++'s development branch has been renamed from 'master' to 'main'. Please see
+  https://github.com/UIUC-PPL/charm/pull/3303 for details.
+
 - We have adopted GitHub discussions
   (https://github.com/UIUC-PPL/charm/discussions) as the preferred
   venue for Charm++ questions and discussions instead of the
